# stealthsnark

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  PLAN.md  README.md  TODO.md
circuits/: compile.sh  range_check.circom
src/: lib.rs
src/emsm/: dual_lpn.rs  emsm.rs  malicious.rs  mod.rs  params.rs  pedersen.rs  raa_code.rs  sparse_vec.rs
src/groth16/: circom.rs  circuit.rs  mod.rs  server_aided.rs
src/protocol/: client.rs  messages.rs  mod.rs  server.rs
tests/: integration.rs
