[package]
name = "stealthsnark"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[dependencies]
# Arkworks 0.5
ark-ff = { version = "0.5", features = ["std"] }
ark-ec = { version = "0.5", features = ["std"] }
ark-poly = { version = "0.5" }
ark-std = { version = "0.5" }
ark-serialize = { version = "0.5", features = ["derive"] }
ark-bn254 = { version = "0.5" }
ark-groth16 = { version = "0.5" }
ark-relations = { version = "0.5" }
ark-snark = { version = "0.5" }
ark-r1cs-std = { version = "0.5" }
ark-crypto-primitives = { version = "0.5" }

# Networking
tokio = { version = "1", features = ["full"] }
axum = "0.8"
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
bincode = "1.3"

# Circom
ark-circom = { version = "0.5", default-features = true }
num-bigint = "0.4"

# Other
rayon = "1.10"
rand = "0.8"
rand_chacha = "0.3"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tokio-test = "0.4"
